// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacetFilter renders facet select and search input 1`] = `
<Grid.Column
  lg={4}
  xl={5}
>
  <div
    className="FacetFilter FacetSelected"
  >
    <Select
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "No Breakdown",
            "value": "",
          },
          Object {
            "label": "By Campaign",
            "value": "campaign_id",
          },
          Object {
            "label": "By IP Pool",
            "value": "ip_pool",
          },
          Object {
            "label": "By Sending Domain",
            "value": "sending_domain",
          },
        ]
      }
      value="campaign"
    />
    <TextField
      onBlur={[Function]}
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Search"
      resize="both"
      suffix={<Search />}
      type="text"
      value=""
    />
  </div>
</Grid.Column>
`;

exports[`FacetFilter renders only facet select 1`] = `
<Grid.Column
  lg={3}
  xl={3}
>
  <div
    className="FacetFilter"
  >
    <Select
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "No Breakdown",
            "value": "",
          },
          Object {
            "label": "By Campaign",
            "value": "campaign_id",
          },
          Object {
            "label": "By IP Pool",
            "value": "ip_pool",
          },
          Object {
            "label": "By Sending Domain",
            "value": "sending_domain",
          },
        ]
      }
    />
  </div>
</Grid.Column>
`;
